--- a/isis/src/system/apps/kerneldbgen/tsts/ck/Makefile
+++ b/isis/src/system/apps/kerneldbgen/tsts/ck/Makefile
@@ -2,22 +2,25 @@
 # This test creates an output database file from the kernels in the input file
 # that follow the given filter for reconstructed ck file name patterns.
 # Note that the array style for this input is \("pattern1","pattern2"\)
-.IGNORE:
+#
+# After the output PVL is created, when compared, the DIFF file indicates to
+# ignore RunTime and File.  The File keyword is ignored since, depending on 
+# where the test is run, files may have different paths. These paths can not be 
+# removed since they may be long enough to take up multiple lines.
+#
+# The kernelFileNamesWithPath file is created to pull out the File keyword
+# values, in order.  This is then passed into SED, removing the paths and 
+# leaving only the ordered kernel names.
 APPNAME = kerneldbgen
-
-# grep -v RunTime testTmp/temp01.db &gt; <temp>temp1.db</temp> 2&gt;&amp;1;
-# head -n 19 testTmp/temp1.db &gt; <temp>temp.1.db</temp> 2&gt;&amp;1;
-
-kernel.db.noTestDataPath.txt.IGNORELINES = RunTime
-
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) to=$(OUTPUT)/kernel.db.txt \
+	$(APPNAME) to=$(OUTPUT)/kernel.db.pvl \
 	  type=CK \
 	  recondir=$(INPUT) \
 	  reconfilter=\("mro_sc_2005-10*.bc","mro_sc_2005-12-*.bc"\) \
 	  sclk=\$$mro/kernels/sclk/MRO_SCLKSCET.00006.tsc \
-	  lsk=\$$base/kernels/lsk/naif0008.tls > /dev/null;
-	$(SED) 's+/.*/input/+input/+' $(OUTPUT)/kernel.db.txt > $(OUTPUT)/kernel.db.noTestDataPath.txt;
-	$(RM) $(OUTPUT)/kernel.db.txt;
+	  lsk=\$$base/kernels/lsk/naif0008.tls > /dev/null; \
+	grep "mro_sc_2005" $(OUTPUT)/kernel.db.pvl > $(OUTPUT)/kernelFileNamesWithPath.txt;
+	$(SED) s+.*/++ $(OUTPUT)/kernelFileNamesWithPath.txt > $(OUTPUT)/orderedKernelFileNames.txt;
+	$(RM) $(OUTPUT)/kernelFileNamesWithPath.txt;
