Cubes now have the ability to be imported into projects in order to make the control net one gui program function in a manageable way. This indirectly required changes that result in cube attributes (the +Bsq or +Real or +1-3 etc... after cube names when given to programs) to give appropriate errors when they aren't understood. Previously when attributes were not understood, it ignored them completely without an error or warning. Fixes #961.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4528 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/isis2pds/tsts/manual/Makefile
+++ b/isis/src/base/apps/isis2pds/tsts/manual/Makefile
@@ -1,5 +1,8 @@
 APPNAME = isis2pds
 
+s16bitmanualdefault.cub.TOLERANCE = 0.000000001
+s16bitmanualspecialpixels.cub.TOLERANCE = 0.000000001
+
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
