In findgaps, added the option to nullify a gap and add a buffer of null lines above and below each gap and output these results to a cube. If no output cube is specified results will only be output to a log file (.pvl, .prt, or .txt) or vice versa. Neither output affects the other. Fixes #582.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4533 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/findgaps/tsts/endOfBandGap/Makefile
+++ b/isis/src/base/apps/findgaps/tsts/endOfBandGap/Makefile
@@ -3,5 +3,6 @@ APPNAME = findgaps
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) from=$(INPUT)/peaksGap.cub \
-	to=$(OUTPUT)/results.txt > /dev/null;
+	$(APPNAME) from=$(INPUT)/findGapsTest_endOfBandGap.cub                        \
+	to=$(OUTPUT)/endOfGapCubeResults.cub log=$(OUTPUT)/endOfBandGapLogResults.pvl \
+	> /dev/null;                                                                  \
