--- a/isis/src/base/apps/findgaps/tsts/realData/Makefile
+++ b/isis/src/base/apps/findgaps/tsts/realData/Makefile
@@ -2,6 +2,10 @@ APPNAME = findgaps
 
 include $(ISISROOT)/make/isismake.tsts
 
+# All parameters changed from their default value.
+
 commands:
-	$(APPNAME) from=$(INPUT)/I11971007RDR_lev1.cub \
-	to=$(OUTPUT)/results.pvl > /dev/null;
+	$(APPNAME) from=$(INPUT)/findGapsTest_realData.cub                        \
+	to=$(OUTPUT)/realDataCubeResults.cub log=$(OUTPUT)/realDataLogResults.pvl \
+	cortol=0.6 above=10 below=5                                               \
+	> /dev/null;
