A camera model for the Kaguya MI sensors has been added to Isis, small changes to the keywords added by the kaguyami2isis program were necessary.  Users will need to rerun kaguyami2isis for previously imported cubes.  references #919.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4534 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/local/apps/kaguyami2isis/tsts/default/Makefile
+++ b/isis/src/local/apps/kaguyami2isis/tsts/default/Makefile
@@ -1,6 +1,10 @@
 APPNAME = kaguyami2isis
 
+#NOPREFERENCES=
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	cp $(INPUT)/deferred.txt $(OUTPUT)/deferred.txt > /dev/null;
+	$(APPNAME) from=$(INPUT)/vis.img \
+	  to=$(OUTPUT)/vis.cub > /dev/null
+	$(APPNAME) from=$(INPUT)/nir.img \
+	  to=$(OUTPUT)/nir.cub > /dev/null
