PROG Removed extraneous output from the findgaps app tests. References #582.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4538 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/findgaps/tsts/default/Makefile
+++ b/isis/src/base/apps/findgaps/tsts/default/Makefile
@@ -7,8 +7,9 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/findGapsTest_basedOnI02025005RDR.cub \
-	  log=$(OUTPUT)/cubeIsDefaultLogResults.pvl;                  \
+	  log=$(OUTPUT)/cubeIsDefaultLogResults.pvl                   \
+	  > /dev/null;                                                \
 	                                                              \
 	$(APPNAME) from=$(INPUT)/findGapsTest_basedOnI02025005RDR.cub \
-	  to=$(OUTPUT)/pvlIsDefaultCubeResults.cub;                   \
+	  to=$(OUTPUT)/pvlIsDefaultCubeResults.cub                    \
 	  > /dev/null;
