cnethist: fixed error handling for networks without residual data; fixes #841
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4539 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnethist/tsts/case01/Makefile
+++ b/isis/src/control/apps/cnethist/tsts/case01/Makefile
@@ -6,9 +6,11 @@ commands:
 	$(CP) $(INPUT)/*.net $(OUTPUT) > /dev/null;
 	$(LS)  $(OUTPUT)/*jigged.net > $(OUTPUT)/net.lis;
 	$(LS)  $(OUTPUT)/*Chen.net >> $(OUTPUT)/net.lis;
+        #this last network has no residual data and was added to test the error message
+	$(LS)  $(OUTPUT)/*autoseed*.net >> $(OUTPUT)/net.lis;
 	$(APPNAME) clist=$(OUTPUT)/net.lis \
 	to=hist.txt \
-	bin_width = 0.1 > /dev/null;
+	bin_width = 0.1 >& $(OUTPUT)/error.txt;
 	cat hist.txt  \
 	  | sed 's/\/[^,]*\/\([^,\/]*\.net\)/\1/g' \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
