Modified so empty output files are not created. Added appTests. Fixes #253. Fixed bug with NOMEASURELESS and POINTLIST filters. Fixes #955. Added webpage example, updated documentation. Fixes #927.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4542 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetextract/tsts/basic/Makefile
+++ b/isis/src/control/apps/cnetextract/tsts/basic/Makefile
@@ -1,13 +1,34 @@
+# Basic cnetextract test using noignore, nosinglemeasure, and nomeasureless filters
+#
+# Since a prefix is given, with the given filters, this test will make the 
+# following reports:
+#		preIgnoredPoints.txt 
+#		preIgnoredMeasures.txt 
+#		preSingleMeasurePoints.txt 
+#		preMeasurelessPoints.txt 
+#
+# The following will be extracted
+#		--points that are not ignored, with at least two measures
+#		for each of these points the following measures will be extracted:
+#			--reference measures (ignored or not)
+# 			--non-ignored measures
 APPNAME = cnetextract
 
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(LS) $(INPUT)/*.cub > $(OUTPUT)/list.lis;
-	$(APPNAME) fromlist=$(OUTPUT)/list.lis cnet=$(INPUT)/cnet.net \
-	  tolist=$(OUTPUT)/newList.lis onet=$(OUTPUT)/newNet.net \
-	  networkid=new description=new prefix=$(OUTPUT)/pre \
-	  noignore=true nosinglemeasure=true nomeasureless=true \
+	$(APPNAME) fromlist=$(OUTPUT)/list.lis \
+	  cnet=$(INPUT)/cnet.net \
+	  prefix=$(OUTPUT)/pre \
+	  tolist=$(OUTPUT)/newList.lis \
+	  onet=$(OUTPUT)/newNet.net \
+	  networkid=new \
+	  description=new \
+	  noignore=true \
+	  nosinglemeasure=true \
+	  nomeasureless=true \
 	  > /dev/null;
+	$(SED) 's+/.*/input/+input/+' $(OUTPUT)/newList.lis > $(OUTPUT)/newList.txt;
 	$(RM) $(OUTPUT)/newList.lis;
 	$(RM) $(OUTPUT)/list.lis;
