Apollo panoramic camera, init, and stitcher apps/objs are up to current coding standards, have tests, and function properly; references #808
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4544 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/apollo/apps/apollopaninit/tsts/default/Makefile
+++ b/isis/src/apollo/apps/apollopaninit/tsts/default/Makefile
@@ -3,4 +3,18 @@ APPNAME = apollopaninit
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	cp $(INPUT)/truth.txt $(OUTPUT)/truth.txt;
+	cp $(INPUT)/apolloPanImage.cub $(OUTPUT)/ > /dev/null;
+	$(APPNAME) from = $(OUTPUT)/apolloPanImage.cub \
+		Mission = "APOLLO15" \
+		Microns = 50 \
+		GMT = "1971-08-04 16:28:25.829" \
+		LON_NADIR = 5.4338492 \
+		LAT_NADIR = 18.2524543 \
+		CRAFT_ALTITUDE = 116.9061584 \
+		LON_INT = 6.2666336 \
+		LAT_INT = 17.953633 \
+		VEL_AZM = 292.6602745 \
+		VEL_HORIZ = 1.6212918 \
+		VEL_RADIAL = -0.0056892 > /dev/null;
+	catlab from=$(OUTPUT)/apolloPanImage.cub > $(OUTPUT)/label.pvl;
+	$(RM) $(OUTPUT)/apolloPanImage.cub > /dev/null;
