prog; update to apollopanstitcher make file to change app name to stitcher; references #808
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4545 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/apollo/apps/apollopanstitcher/tsts/default/Makefile
+++ b/isis/src/apollo/apps/apollopanstitcher/tsts/default/Makefile
@@ -1,4 +1,4 @@
-APPNAME = apollopansticher
+APPNAME = apollopanstitcher
 #This test excercises the stiching of 8 apollopanoramic subscans into a single image.
 #  The detection of the fiducial marks is complex and involves a RANSAC algorithm.
 #  For this reason the final stiched cubes are expected to vary slightly.  To address
