Improved slpmap to compute slopes using local pixel resolution, fixes #910
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4618 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/slpmap/tsts/slope/Makefile
+++ b/isis/src/base/apps/slpmap/tsts/slope/Makefile
@@ -3,4 +3,6 @@ APPNAME = slpmap
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) from=$(INPUT)/128_vallis_marinaris.cub to=$(OUTPUT)/slpmapTruth.cub > /dev/null;
+	$(APPNAME) from=$(INPUT)/test.cub to=$(OUTPUT)/slpmapTruth.cub output=slope > /dev/null;
+	$(APPNAME) from=$(INPUT)/test.cub to=$(OUTPUT)/slpmapTruth2.cub output=slope units=radians > /dev/null;
+	$(APPNAME) from=$(INPUT)/test.cub to=$(OUTPUT)/slpmapTruth3.cub pixres=user resolution=500 > /dev/null;
