Added Ubuntu 12-04 support to ISIS. Fixes 1039.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4621 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/shadowtau/tsts/hapkehen1/Makefile
+++ b/isis/src/base/apps/shadowtau/tsts/hapkehen1/Makefile
@@ -8,7 +8,7 @@ commands:
 	$(APPNAME) from=$(INPUT)/TAU_INPUT_A.LIS to=$(OUTPUT)/hapkehen1.txt \
 	phtname=hapkehen wh=0.52 hh=0.17 b0=0.025 theta=30 hg1=-0.213 hg2=0 \
 	zerob0standard=true atmname=hapkeatm1 wha=0.95 hga=0.68 hnorm=0.003 \
-	> /dev/null;                                                        \
+	> /dev/null;                                                        
 	$(CAT) $(OUTPUT)/hapkehen1.txt | sed 's/\(816A02,.*\)\(35312\)\([0-9]\)/\1\2/' \
 	  > $(OUTPUT)/hapkehen1.sed.txt;                                                         \
 	$(MV) $(OUTPUT)/hapkehen1.sed.txt $(OUTPUT)/hapkehen1.txt;
