This commit was reverted. In cisscal, changed the default value of the FLUXUNITS parameter to I/F (instead of INTENSITY). Fixes #219.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4631 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/cassini/apps/cisscal/tsts/nacLsyTblGain3NonlySum2/Makefile
+++ b/isis/src/cassini/apps/cisscal/tsts/nacLsyTblGain3NonlySum2/Makefile
@@ -6,5 +6,6 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/N1355543510_1.c2i.nospice.cub \
 	to=$(OUTPUT)/N1355543510_1.truth.cub \
+	flux="INTENSITY" \
 	> /dev/null;
 	catlab from=$(OUTPUT)/N1355543510_1.truth.cub >& $(OUTPUT)/labels.truth.pvl;
