PROG Fixed makefile problems caused by Squish Coco integration. References #1044.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4638 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/Makefile
+++ b/isis/Makefile
@@ -1,7 +1,4 @@
-#include $(ISISROOT)/make/isismake.macros
-CURTIMESTAMP   ?= "[`date +'%Y-%m-%d %H:%M:%S'`]"
-
-include $(ISISROOT)/make/isismake.macros
+include $(ISISROOT)/make/isismake.utils
 
 .NOTPARALLEL:
 
