PROG: Fixed generated makefiles in the documentation area that were still referencing isismake.macros. References #1044.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4653 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/docsys/documents/Makefile-documents
+++ b/isis/src/docsys/documents/Makefile-documents
@@ -1,4 +1,4 @@
-include $(ISISROOT)/make/isismake.macros
+include $(ISISROOT)/make/isismake.os
 
 # ISIS DOCS MAKEFILE
 #   Create XML table of contents for the documents
