In isis2std, some problems with the big tiff exports that caused corrupt outputs are now fixed. The 2GB limitation should be removed completely now. References #579.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4679 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/isis2std/tsts/tiff/Makefile
+++ b/isis/src/base/apps/isis2std/tsts/tiff/Makefile
@@ -9,17 +9,19 @@ commands:
 	  to=$(OUTPUT)/rgb.tif \
 	  mode=rgb \
 	  format=tiff \
-	  stretch=linear > /dev/null;
+	  stretch=linear > /dev/null; \
+	cat $(OUTPUT)/rgb.tfw | sed 's/\(\.[0-9][0-9][0-9]\)\([0-9]*\)/\1/' \
+	  > $(OUTPUT)/rgb.txt; \
+	$(RM) $(OUTPUT)/rgb.tfw; \
 	std2isis FROM=$(OUTPUT)/rgb.tif \
-	  TO=$(OUTPUT)/rgb.cub > /dev/null;
-	rm -rf $(OUTPUT)/rgb.tif;
-
+	  TO=$(OUTPUT)/rgb.cub > /dev/null; \
+	rm -rf $(OUTPUT)/rgb.tif; \
 	$(APPNAME) from=$(INPUT)/grayscale.cub \
 	  to=$(OUTPUT)/grayscale.tif \
 	  mode=grayscale \
 	  format=tiff \
 	  bittype=u16bit \
-	  stretch=linear > /dev/null;
+	  stretch=linear > /dev/null; \
 	std2isis FROM=$(OUTPUT)/grayscale.tif \
-	  TO=$(OUTPUT)/grayscale.cub > /dev/null;
+	  TO=$(OUTPUT)/grayscale.cub > /dev/null; \
 	rm -rf $(OUTPUT)/grayscale.tif;
