in jigsaw, addresses higher order polynomials (and polynomials over a constant hermite spline) for spacecraft position, fixes #783
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4723 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/jigsaw/tsts/apollo/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/apollo/Makefile
@@ -1,14 +1,21 @@
 APPNAME = jigsaw
-#This test exercises a framing camera, specialk solution method, solving for radius, solving for twist,
-#and spsolve=position.
+# These tests exercise the bundle adjustment of images from the Apollo frame camera.
+# Test 1: specialk (dense cholesky) method, solving for position, angles (with twist), and radius; with error propagation.
+# Test 2: sparse (cholmod) method, solving for position, angles (with twist), and radius; with error propagation.
+
+# The "cat bundleout.txt" command in these tests uses sed to do the following (in order):
+# 1. remove cube filename paths
+# 2. remove net filename paths
+# 3. remove digits beyond the fifth decimal place of decimal numbers
+# 4. remove date and time
 
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(LS) -1 $(INPUT)/*.cub > $(OUTPUT)/cube.lis;
-	$(APPNAME) fromlist=$(OUTPUT)/cube.lis  \
+	$(APPNAME) fromlist=$(OUTPUT)/cube.lis \
 	cnet=$(INPUT)/Ames_5-ImageLSTest_USGS_combined.net \
-	onet=$(OUTPUT)/specialK_out.net \
+	onet=$(OUTPUT)/apollo_specialK_out.net \
 	radius=yes \
 	twist=yes \
 	update=no \
@@ -17,36 +24,35 @@ commands:
 	errorpropagation=yes \
 	outlier_rejection=no \
 	sigma0=1.e-10  \
-	ckdegree=yes \
 	bundleout_txt=yes \
 	output_csv=yes \
 	residuals_csv=yes \
 	ckdegree=2 \
-	solvedegree=2 \
+	cksolvedegree=2 \
 	camsolve=angles \
-	spsolve=position > /dev/null;
+	spsolve=position | grep -v "100% Processed" | \
+	grep -v "jigsaw" > apollo_specialk_outLog.txt; \
 	cat bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
-	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
-	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
+	  | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
+	  | sed 's/\/[^,]*\/\([^,\/]*\.net\)/\1/g' \
+	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
-	  > $(OUTPUT)/specialK_bundleout.txt
-	# The above command uses sed to do the following (in order):
-	# 1. remove cube filename paths
-	# 2. remove net filename paths
-	# 3. remove digits beyond the fifth decimal place of decimal numbers
-	# 4. remove date and time
-	cat residuals.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g'\
-	  > $(OUTPUT)/specialK_residuals.csv
+	  > $(OUTPUT)/apollo_specialK_bundleout.txt
+	cat apollo_specialk_outLog.txt | grep -v "Elapsed Time:" | grep -v "TotalElapsedTime" | grep -v "ErrorPropagationElapsedTime" \
+	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
+	  > $(OUTPUT)/apollo_specialk_outLog.txt
+	cat residuals.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
+	  > $(OUTPUT)/apollo_specialK_residuals.csv
 	cat bundleout_images.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
-	  > $(OUTPUT)/specialK_bundleout_images.csv
-	$(RM) residuals.csv bundleout_images.csv > /dev/null;
-	$(MV) bundleout_points.csv $(OUTPUT)/specialK_bundleout_points.csv > /dev/null;
-	$(RM) bundleout.txt > /dev/null
-	# 
-	# Now test cholod method (default)
+	  > $(OUTPUT)/apollo_specialK_bundleout_images.csv
+	$(RM) bundleout_images.csv > /dev/null;
+	$(MV) bundleout_points.csv $(OUTPUT)/apollo_specialK_bundleout_points.csv > /dev/null;
+	$(RM) bundleout.txt print.prt > /dev/null
+	$(RM) apollo_specialk_outLog.txt > /dev/null
+	$(RM) residuals.csv > /dev/null;
 	$(APPNAME) fromlist=$(OUTPUT)/cube.lis  \
 	cnet=$(INPUT)/Ames_5-ImageLSTest_USGS_combined.net \
-	onet=$(OUTPUT)/cholmod_out.net \
+	onet=$(OUTPUT)/apollo_cholmod_out.net \
 	radius=yes \
 	twist=yes \
 	update=no \
@@ -54,29 +60,29 @@ commands:
 	errorpropagation=yes \
 	outlier_rejection=no \
 	sigma0=1.e-10  \
-	ckdegree=yes \
 	bundleout_txt=yes \
 	output_csv=yes \
 	residuals_csv=yes \
 	ckdegree=2 \
-	solvedegree=2 \
+	cksolvedegree=2 \
 	camsolve=angles \
-	spsolve=position  > /dev/null;
+	spsolve=position | grep -v "100% Processed" | \
+	grep -v "jigsaw" > apollo_cholmod_outLog.txt;
 	cat bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
 	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
-	  > $(OUTPUT)/cholmod_bundleout.txt
-	# The above command uses sed to do the following (in order):
-	# 1. remove cube filename paths
-	# 2. remove net filename paths
-	# 3. remove digits beyond the fifth decimal place of decimal numbers
-	# 4. remove date and time
+	  > $(OUTPUT)/apollo_cholmod_bundleout.txt
+	cat apollo_cholmod_outLog.txt | grep -v "Elapsed Time:" | grep -v "TotalElapsedTime" | grep -v "ErrorPropagationElapsedTime" \
+	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
+	  > $(OUTPUT)/apollo_cholmod_outLog.txt
 	cat residuals.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g'\
-	  > $(OUTPUT)/cholmod_residuals.csv
+	  > $(OUTPUT)/apollo_cholmod_residuals.csv
 	cat bundleout_images.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
-	  > $(OUTPUT)/cholmod_bundleout_images.csv
-	$(RM) residuals.csv bundleout_images.csv > /dev/null;
-	$(MV) bundleout_points.csv $(OUTPUT)/cholmod_bundleout_points.csv > /dev/null;
+	  > $(OUTPUT)/apollo_cholmod_bundleout_images.csv
+	$(RM) bundleout_images.csv > /dev/null;
+	$(MV) bundleout_points.csv $(OUTPUT)/apollo_cholmod_bundleout_points.csv > /dev/null;
+	$(RM) bundleout.txt print.prt > /dev/null
+	$(RM) apollo_cholmod_outLog.txt > /dev/null
+	$(RM) residuals.csv > /dev/null;
 	$(RM) $(OUTPUT)/cube.lis print.prt > /dev/null;
-	$(RM) bundleout.txt > /dev/null
