--- a/isis/src/control/apps/jigsaw/tsts/mestimator/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/mestimator/Makefile
@@ -12,7 +12,7 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(LS) -1 $(INPUT)/*.cub > $(OUTPUT)/cube.lis;
-	$(APPNAME) fromlist=$(OUTPUT)/cube.lis  \
+	$(APPNAME) fromlist=$(OUTPUT)/cube.lis \
 	cnet=$(INPUT)/Ames_5-ImageLSTest_USGS_combined.net \
 	onet=$(OUTPUT)/mEstimator_out.net \
 	radius=yes \
@@ -31,17 +31,25 @@ commands:
 	ckdegree=2 \
 	cksolvedegree=2 \
 	camsolve=angles \
-	spsolve=position  > /dev/null;
+	spsolve=position | grep -v "100% Processed" | \
+	grep -v "jigsaw" > apollo_sparse_outLog.txt;
 	cat bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
 	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
-	  > $(OUTPUT)/mEstimator_bundleout.txt
-	cat residuals.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g'\
+	  > $(OUTPUT)/mEstimator_bundleout.txt;
+	cat apollo_sparse_outLog.txt | grep -v "Elapsed Time:" | grep -v "TotalElapsedTime" | grep -v "ErrorPropagationElapsedTime" \
+	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
+	  > $(OUTPUT)/apollo_sparse_outLog.txt;
+	cat residuals.csv | sed 's/,[^,]*\/\([^,\/]*\.cub\)/,\1/g'\
 	  > $(OUTPUT)/mEstimator_residuals.csv
 	cat bundleout_images.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
+	  | perl -pe 's/(^|,|: )([^,:]+\/)([^,\/:]*\.)(net|cub)/\1\3\4/g' 2>/dev/null \
+	  | sed 's/\([0-9]*\.[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]\)\([0-9]*\)/\1/g' \
 	  > $(OUTPUT)/mEstimator_bundleout_images.csv
 	$(RM) residuals.csv bundleout_images.csv > /dev/null;
 	$(MV) bundleout_points.csv $(OUTPUT)/mEstimator_bundleout_points.csv > /dev/null;
 	$(RM) $(OUTPUT)/cube.lis print.prt > /dev/null;
 	$(RM) bundleout.txt > /dev/null
+	$(RM) apollo_sparse_outLog.txt > /dev/null
+
